# Algo-Collection

./: .gitignore  ACM经验.xlsx  CMakeCache.txt  Makefile  README  README.md  README~  acm  cmake_install.cmake  input.txt  main  main.cpp  main1  main2.cpp  note.txt  output.txt  question.txt  template.cpp  template_simple.cpp  收藏.txt
answers/: CMakeLists.txt  main.cpp  main1.cpp  temp.cpp  template.cpp  template_simple.cpp  todo.md
answers/Google code jam/: Practice Round China New Grad Test 2014 A-small-1-attempt0.in  Practice Round China New Grad Test 2014 A-small-2-attempt0.in  Practice Round China New Grad Test 2014 B-small-attempt0.in  Practice Round China New Grad Test 2014 C-small-1-attempt0.in  Practice Round China New Grad Test 2014 C-small-2-attempt0.in  Practice Round China New Grad Test 2014 Problem A. Bad Horse.cpp  Practice Round China New Grad Test 2014 Problem B. Captain Hammer.cpp  Practice Round China New Grad Test 2014 Problem C. Moist.cpp  Qualification Round 2012 Problem C. Recycled Numbers.cpp  Qualification Round 2013 Problem A. Tic-Tac-Toe-Tomek.cpp  Qualification Round Africa 2010 Problem A. Store Credit A-large-practice.in  Qualification Round Africa 2010 Problem A. Store Credit A-small-practice.in  Qualification Round Africa 2010 Problem A. Store Credit.cpp  Qualification Round Africa 2010 Problem B. Reverse Words B-large-practice.in  Qualification Round Africa 2010 Problem B. Reverse Words B-small-practice.in  Qualification Round Africa 2010 Problem B. Reverse Words.cpp  Round 1A 2013 A-large-practice.in  Round 1A 2013 A-small-practice.in  (+36 more)
(+4185 files in other folders)
